# mysql51-hack

./: .gitignore  INSTALL-SOURCE  INSTALL-WIN-SOURCE  Makefile.in  configure  configure.in
Docs/: INSTALL-BINARY
cdb/: Makefile  Makefile.am  Makefile.in  cdb.conf  cdb.cpp  cdb.h  cdb_error.h  cdb_shm_dump  cdb_shm_dump.cpp  cdb_shm_mgr.cpp  cdb_shm_mgr.h  mysql_headers.h  tfc_base_comm.h  tfc_base_config.h  tfc_base_config_file.cpp  tfc_base_config_file.h  tfc_binlog.cpp  tfc_binlog.h  tfc_cache_access.cpp  tfc_cache_access.h  tfc_cache_chunk_alloc.cpp  tfc_cache_chunk_alloc.h  tfc_cache_hash_map.cpp  tfc_cache_hash_map.h  tfc_md5.cpp  tfc_md5.h  tfc_shm_map.h  tfc_spin_lock.h
cdb-tools/: Makefile  cdb_clear_shm.sh  cdb_ins_client_dml_monitor  cdb_ins_conn_monitor  cdb_ins_dml_monitor  cdb_shm_conf_calc.cpp  cdb_shm_dump  cdb_shm_dump.cpp  cdb_tab_dml_monitor  cdb_tool_comm.cpp  cdb_tool_comm.h  hash_test  hash_test.cpp  test_main.cpp
cdb/.deps/: cdb.Po  cdb_shm_mgr.Po  tfc_binlog.Po  tfc_cache_access.Po  tfc_cache_chunk_alloc.Po  tfc_cache_hash_map.Po  tfc_md5.Po
extra/yassl/: Makefile.in
include/: Makefile.in  my_pthread.h
libmysqld/: Makefile.in
man/: Makefile.in  make_win_bin_dist.1
mysql-test/: Makefile.in
scripts/: make_binary_distribution.sh  mysqlbug
sql/: Makefile.in  cdb.cpp  cdb.h  cdb.mk  cdb_error.h  cdb_shm_mgr.cpp  cdb_shm_mgr.h  mysql_priv.h  mysqld.cc  set_var.cc  sql_builtin.cc  sql_connect.cc  sql_parse.cc  tfc_shm_map.h  tfc_spin_lock.h
strings/: ctype-gbk.c
support-files/: Makefile.in
tests/: Makefile.in  mysql_client_test.c
(+44 files in other folders)
